# microphaser

./: .fuse_hidden000d7a2a00000002  .gitignore  .travis.yml  .~lock.test.info.tsv#  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
shorttest/: shorttest.bam  shorttest.bam.bai  shorttest.fa  shorttest.fa.amb  shorttest.fa.ann  shorttest.fa.bwt  shorttest.fa.fai  shorttest.fa.pac  shorttest.fa.sa  shorttest.vcf  shorttest_golden.bam  shorttest_golden.vcf  shorttest_read1.fq  shorttest_read2.fq
src/: build_ref_cli.yaml  build_reference.rs  cli.yaml  common.rs  filter.rs  filter_cli.yaml  germline_cli.yaml  main.rs  microphasing.rs  microphasing_wholegenome.rs  normal_microphasing.rs  peptides.rs  somatic_cli.yaml  wgs.yaml
test/: empty_test_golden.bam  empty_test_golden.vcf  empty_test_read1.fq  ensembl_test.fa.amb  ensembl_test.fa.ann  ensembl_test.fa.bwt  ensembl_test.fa.pac  ensembl_test.fa.sa  ensembl_test_golden.bam  ensembl_test_golden.vcf  ensembl_test_read1.fq  ensembl_test_read2.fq  phasing_test.vcf  test.bed  test.fa  test.fa.amb  test.fa.ann  test.fa.bwt  test.fa.pac  test.fa.sa  test.gtf  test_golden.bam  test_golden.vcf  test_read1.fq  test_read2.fq  vcf_test.bam  vcf_test.bam.bai  vcf_test.vcf  vcf_test_golden.bam  vcf_test_golden.vcf  vcf_test_read1.fq  vcf_test_read2.fq
testout/: shortest.out  testout.fa
tests/: lib.rs
tests/output/: .fuse_hidden000d7a5600000003  .nfs00000000020a0eba000003b7  .~lock.forward_test.tsv#  .~lock.info.filtered_fs.tsv#  .~lock.reverse_test.tsv#  .~lock.splice_forward_test.tsv#  .~lock.test_filter.info.tsv#  (+2 more)
(+125 files in other folders)
